# cpvt-database-models

./: .gitignore  .gitlab-ci.ignore.yml  .gitlab-ci.yml  Makefile  alembic.ini  docker-compose.dev.yaml  mypy.ini  pyproject.toml  tox.ini
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1f355f80cd00_blank.py  4de7ec4f7f03_schema_1_14_1.py  4de7ec4f7f03_schema_1_16.py  734e7cc14399_schema_1_14_2.py  734e7cc14399_schema_1_15.py  96d9f616720a_schema_2_0.py  c5d04cc55476_schema_1_14.py  dd040736b518_schema_2_1.py
cpvt_database_models/: settings.py
cpvt_database_models/bootstrap/: .gitignore  __init__.py  bootstrap.py
cpvt_database_models/database/: __init__.py
cpvt_database_models/filters/: add_filters.py  schema.py
cpvt_database_models/filters/sql/: 01_ui_filter.sql  02_variant_filters.sql  03_protein_filters.sql  04_individuals_filters.sql
cpvt_database_models/models/: __init__.py  conditions.py  kv_store.py  pathogenicity_predictor.py  publication.py
cpvt_database_models/models/individuals/: __init__.py  family_history.py  family_history_kin.py  individual.py  treatments.py
cpvt_database_models/models/individuals/association_tables/: individual_condition.py  individual_variant_condition_link.py  individual_variants.py
cpvt_database_models/models/uta/: uta_tables.py
cpvt_database_models/models/variants/: structure.py  variant.py  variant_links.py  variant_origins.py  variant_properties.py
cpvt_database_models/models/variants/hgvs_variant/: __init__.py  sequence_variant.py
cpvt_database_models/models/views/: __init__.py  add_views.py
cpvt_database_models/models/views/sql/: 02_variant_view.sql  03_protein_sequence_variant_view.sql  05_cpvt_individuals.sql
cpvt_database_models/schemas/: __init__.py
cpvt_website_models/: settings.py  util.py
cpvt_website_models/database/: __init__.py  alembic_v1.ini  base.py  cleanup.py  db.py  run_alembic.py  setup.py  types.py
cpvt_website_models/database/age/: apache_conn.py
cpvt_website_models/models/: __init__.py  conditions.py  kv_store.py  pathogenicity_predictor.py  publication.py
cpvt_website_models/models/individuals/: __init__.py  family_history.py  family_history_kin.py  individual.py  treatments.py
cpvt_website_models/models/individuals/association_tables/: __init__.py  individual_condition.py  individual_variant_condition_link.py  individual_variants.py
cpvt_website_models/models/triggers/: variants.py
cpvt_website_models/models/uta/: __init__.py  uta_tables.py
cpvt_website_models/models/variants/: __init__.py  structure.py  variant.py  variant_links.py  variant_origins.py  variant_properties.py
cpvt_website_models/models/variants/hgvs/: __init__.py  hgvs_types.pymeta  sequence_variant.py
cpvt_website_models/models/variants/hgvs_variant/: __init__.py  sequence_variant.py
cpvt_website_models/models/views/: __init__.py  add_views.py
cpvt_website_models/models/views/sql/: 01_variant_num_individuals.sql  02_variant_view.sql  04_individuals.sql  05_cpvt_individuals.sql
tests/: conftest.py  filter.json  test_add_views.py  test_create_model.py  test_filters.py
