[project]
name = "cpvt-website-models"
version = "0.1.16"
description = "Sqlalchmey models for the CPVT Database website"
authors = [
    { name = "Alexander Chang" }
]
license = { text = "MIT License" }
readme = "README.md"
keywords = ["cpvt", "database", "sqlalchemy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: SQL",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "sqlalchemy[asyncio]>=2.0.32",
    "parsley>=1.3",
    "biopython>=1.84",
    "hgvs>=1.5.4",
    "sqlparse>=0.5.1",
    "psycopg>=3.2.1",
    "pydantic-settings>=2.4.0",
    "setuptools>=72.2.0",
]
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["cpvt_website_models"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.0",
    "alembic>=1.13.2",
    "psycopg[binary]>=3.2.1",
    "pytest>=8.3.2",
    "testcontainers[postgres]>=4.8.0",
    "pytest-asyncio>=0.23.8",
    "pytest-xdist>=3.6.1",
    "pytest-cov>=5.0.0",
    "coverage>=7.6.1",
]
