[tool.poetry]
name = "cpvt-database-models"
version = "0.1.16"
description = "Sqlalchmey models for the CPVT Database website"
authors = ["Alexander Chang"]
readme = "README.md"
license = "MIT"
homepage = "https://gitlab.com/alexdaiii/cpvt-database-models"
repository = "https://gitlab.com/alexdaiii/cpvt-database-models"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: SQL",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[tool.poetry.dependencies]
python = "^3.10, <3.13"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.32" }
parsley = "^1.3"
biopython = "^1.84"
hgvs = "^1.5.4"
setuptools = "^73.0.0"
psycopg = { version = "^3.2.1", optional = true }
sqlparse = { version = "^0.5.1", optional = true }
pydantic-settings = { version = "^2.4.0", optional = true }

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.1"
alembic = "^1.13.2"
pytest = "^8.3.2"
testcontainers = { version = "4.8", extras = ["postgres"] }
pytest-asyncio = "^0.23.8"
pytest-xdist = "^3.6.1"
pytest-cov = "^5.0.0"
coverage = "^7.6.1"
mypy = "^1.11.1"

[tool.poetry.extras]
with_driver = ["psycopg"]
add_views = ["sqlparse", "pydantic-settings"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
